[package]
name = "taurus-api"
version = "0.1.0"
authors = ["Sylvestre Gallon <sylvestre@klub.ki>"]
edition = "2021"

[dependencies]
synnax = "0.1.7"
anyhow = "1.0"
toml = "0.5.9"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde-aux = "4.0.0"
log = "0.4.17"
env_logger = "0.10.0"
base64 = "0.21.0"
quick-protobuf = "0.8.1"